메인 상단 배너 작업
